# rust_rpc_pet_project

./: Cargo.toml  README.md  TODO  service_discovery.json
client/: Cargo.toml
client/config/: Default.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  routing.rs  service.rs  service_discovery.rs  settings.rs
rpc/: Cargo.toml  build.rs
rpc/proto/serruf-rpc/: serruf-rpc.proto
rpc/src/: lib.rs
server1/: Cargo.toml
server1/config/: Default.toml
server1/src/: main.rs
server2/: Cargo.toml
server2/config/: Default.toml
server2/src/: main.rs
server3/: Cargo.toml
server3/src/: main.rs
