[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
serruf-rpc = { path = "../rpc" }
tonic = "0.8.2"
prost = "0.11.0"
prost-types = "0.11.0"
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = "0.1.11"
futures = "0.3.19"
serde = { version = "1.0.132", features = ["derive"] }
