[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serruf-rpc = { path = "../rpc" }
tonic = "0.8.2"
prost = "0.11.0"
prost-types = "0.11.0"
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = "0.1.11"
futures = "0.3.19"
serde = { version = "1.0.132", features = ["derive"] }
config = "0.13.1"
async-channel = "1.7.1"
backoff = { version = "0.4.0", features = ["tokio"] }
lazy_static = "1.4.0"
