[package]
name = "server1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serruf-rpc = { path = "../rpc" }
common = { path = "../common" }
tonic = "0.6.2"
prost = "0.9.0"
prost-types = "0.9.0"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
futures = "0.3.19"
chrono = { version = "0.4.19", features = ["serde"] }
bigdecimal = "0.1.2"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
log = "0.4.14"
env_logger = "0.9.0"
dotenv = "0.15.0"
rust-embed = "6.3.0"
backoff = { version = "0.4.0", features = ["tokio"] }
async-channel = "1.7.1"
